<resources>

    <string name="app_name">Sleepy Log</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_edit_data">Edit Data</string>
    <string name="title_activity_display_data">Display Data</string>
    <string name="title_activity_new_help">Help</string>
    <string name="m_import">Import</string>
    <string name="m_gallery">Gallery</string>
    <string name="m_slideshow">Slideshow</string>
    <string name="m_tools">Tools</string>
    <string name="m_communicate">Communicate</string>
    <string name="m_share">Share</string>
    <string name="m_send">Send</string>
    <string name="answer_questions">Please Answer the following questions:</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="welcome_msg">Welcome to SleepyLog</string>
    <string name="time_to_bed">Time To Bed</string>
    <string name="time_to_wake">Time ToWake Up</string>
    <string name="time_to_sleep">Time To Sleep</string>
    <string name="time_out_of_bed">Time Out of Bed</string>
    <string name="avengers">Team Avengers</string>
    <string name="team_members">Kevin Ball, Victoria Larina, Junliu Zhang</string>
    <string name="alertDialogTitle">Quit Dialog</string>
    <string name="alertDialogMessage">Do you really want to quit?</string>
    <string name="dateAlertDialogTitle">Date Picker Dialog</string>
    <string name="dateAlertDialogMessage">Pick a Date</string>

    <string name="sleep_quality_prompt">Choose a country</string>
    <string name="set_time">Set Time</string>
    <string name="question1">1. How long do you think it take you to fall asleep?</string>
    <string name="question2">2. How long do you think you were awake durning the night?</string>
    <string name="quetion3">3. Did you take any naps yesterday?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question4">4. How would you rate your Sleep Quality last night?</string>
    <string name="zero_time">00:00</string>
    <string name="sleepefficiency">SleepEfficiency</string>
    <string name="time_in_bed">Time In Bed</string>
    <string name="time_asleep">Time Asleep</string>
    <string name="sleep_quality">Sleep Quality</string>
    <string name="naps">Naps</string>
    <string name="any_naps_taken">Any Naps taken</string>
    <string name="length_of_naps">Length of Naps</string>
    <string name="length_of_awakenings">Length of Awakenings</string>
    <string name="time_to_fall_asleep">Time to fall asleep</string>
    <string name="date">Date</string>
    <string name="time_awake">Time Awake</string>
    <string name="enter_data_in_db">Enter Data in DB</string>
    <string name="pick_date">Pick a Date</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="please_choose_the_date">Please choose the date:</string>
    <string name="already_in_db">Date is already in bd</string>
    <string name="print_db">print DB</string>
    <string name="clear">Clear</string>
    <string name="date_picked">Date picked</string>
    <string name="home">Home</string>
    <string name="edit_data">Edit Data</string>
    <string name="display_data">Display Data</string>
    <string name="help">Help</string>
    <string-array name="sleep_quality_array">
        <item>1 (poor)</item>
        <item>2 </item>
        <item>3 </item>
        <item>4 </item>
        <item>5 (excellent)</item>
    </string-array>


    <integer name="tag0">0</integer>
    <integer name="tag1">1</integer>
    <integer name="tag2">2</integer>
    <integer name="tag3">3</integer>
    <integer name="tag4">4</integer>
    <integer name="tag5">5</integer>
    <integer name="tag6">6</integer>




</resources>
